examples/handwritten-scala/grammar.js
    compilation_unit: $ => repeat($._definition),
    /*
     * scala.ebnf:23-35
     * _definition                          ::= package_clause
     *                                        | package_object
     *                                        | class_definition
     *                                        | import_declaration
     *                                        | object_definition
     *                                        | trait_definition
     *                                        | val_definition
     *                                        | val_declaration
     *                                        | var_definition
     *                                        | var_declaration
     *                                        | type_definition
     *                                        | function_definition
     *                                        | function_declaration
     */
    _definition: $ => choice(
                        $.package_clause,
                        $.package_object,
                        $.class_definition,
                        $.import_declaration,
                        $.object_definition,
                        $.trait_definition,
                        $.val_definition,
                        $.val_declaration,
                        $.var_definition,
                        $.var_declaration,
                        $.type_definition,
                        $.function_definition,
                        $.function_declaration
                      ),
    /*
     * scala.ebnf:36
     * package_clause                       ::= 'package' (package_identifier: name) (template_body?: body)
     */
    object_definition: $ => seq(optional('case'), 'object', $._object_definition),
    /*
     * scala.ebnf:44
     * _object_definition                   ::= (identifier: name) (extends_clause?: extend) (template_body?: body)
     */
    _object_definition: $ => seq(
                               field('name', $.identifier),
                               field('extend', optional($.extends_clause)),
                               field('body', optional($.template_body))
                             ),
    /*
     * scala.ebnf:45-47
     * class_definition                     ::= annotation* modifiers? 'case'? 'class' (identifier: name)
     *                                            (type_parameters?: type_parameters) (class_parameters*: class_parameters)
     *                                            (extends_clause?: extend) (template_body?: body)
     */
    class_definition: $ => seq(
                             repeat($.annotation),
                             optional($.modifiers),
                             optional('case'),
                             'class',
                             field('name', $.identifier),
                             field('type_parameters', optional($.type_parameters)),
                             field('class_parameters', repeat($.class_parameters)),
                             field('extend', optional($.extends_clause)),
                             field('body', optional($.template_body))
                           ),
    /*
     * scala.ebnf:48-49
     * trait_definition                     ::= 'trait' (identifier: name) (type_parameters?: type_parameters)
     *                                            (extends_clause?: extend) (template_body?: body)
     */
    type_parameters: $ => seq(
                            '[',
                            seq($._variant_type_parameter, repeat(seq(',', $._variant_type_parameter))),
                            ']'
                          ),
    /*
     * scala.ebnf:51
     * _variant_type_parameter              ::= annotation* (covariant_type_parameter | contravariant_type_parameter | _type_parameter)
     */
    _variant_type_parameter: $ => seq(
                                    repeat($.annotation),
                                    choice($.covariant_type_parameter, $.contravariant_type_parameter, $._type_parameter)
                                  ),
    /*
     * scala.ebnf:52
     * covariant_type_parameter             ::= '+' _type_parameter
     */
    covariant_type_parameter: $ => seq('+', $._type_parameter),
    /*
     * scala.ebnf:53
     * contravariant_type_parameter         ::= '-' _type_parameter
     */
    contravariant_type_parameter: $ => seq('-', $._type_parameter),
    /*
     * scala.ebnf:54-55
     * _type_parameter                      ::= ((wildcard | identifier): name) (type_parameters?: type_parameters)
     *                                            (upper_bound?: bound) (lower_bound?: bound) (view_bound*?: bound) (context_bound*?: bound)
     */
    _type_parameter: $ => seq(
                            field('name', choice($.wildcard, $.identifier)),
                            field('type_parameters', optional($.type_parameters)),
                            field('bound', optional($.upper_bound)),
                            field('bound', optional($.lower_bound)),
                            field('bound', optional(repeat($.view_bound))),
                            field('bound', optional(repeat($.context_bound)))
                          ),
    /*
     * scala.ebnf:56
     * upper_bound                          ::= '<:' (_type: type)
     */
    upper_bound: $ => seq('<:', field('type', $._type)),
    /*
     * scala.ebnf:57
     * lower_bound                          ::= '>:' (_type: type)
     */
    lower_bound: $ => seq('>:', field('type', $._type)),
    /*
     * scala.ebnf:58
     * view_bound                           ::= '<%' (_type: type)
     */
    view_bound: $ => seq('<%', field('type', $._type)),
    /*
     * scala.ebnf:59
     * context_bound                        ::= ':' (_type: type)
     */
    context_bound: $ => seq(':', field('type', $._type)),
    /*
     * scala.ebnf:60
     * template_body                        ::= '{' _block? '}'
     */
    template_body: $ => seq('{', optional($._block), '}'),
    /*
     * scala.ebnf:61
     * annotation                           ::= >('@' (_simple_type: name) (arguments*: arguments))
     */
    type_definition: $ => seq(
                            repeat($.annotation),
                            optional($.modifiers),
                            'type',
                            field('name', $._type_identifier),
                            field('type_parameters', optional($.type_parameters)),
                            '=',
                            field('type', $._type)
                          ),
    /*
     * scala.ebnf:68-70
     * function_definition                  ::= annotation* modifiers? 'def' (identifier: name) (type_parameters?: type_parameters)
     *                                            (parameters*: parameters) (':' (_type: return_type))?
     *                                            (('=' (_expression: body)) | (block: body))
     */
    function_definition: $ => seq(
                                repeat($.annotation),
                                optional($.modifiers),
                                'def',
                                field('name', $.identifier),
                                field('type_parameters', optional($.type_parameters)),
                                field('parameters', repeat($.parameters)),
                                optional(seq(':', field('return_type', $._type))),
                                choice(seq('=', field('body', $._expression)), field('body', $.block))
                              ),
    /*
     * scala.ebnf:71-72
     * function_declaration                 ::= annotation* modifiers? 'def' (identifier: name) (type_parameters?: type_parameters)
     *                                            (parameters*: parameters) (':' (_type: return_type))?
     */
    extends_clause: $ => seq('extends', field('type', $._type), optional($.arguments)),
    /*
     * scala.ebnf:82
     * class_parameters                     ::= '(' 'implicit'? (class_parameter (',' class_parameter)*)? ')'
     */
    parameters: $ => seq(
                       '(',
                       optional('implicit'),
                       optional(seq($.parameter, repeat(seq(',', $.parameter)))),
                       ')'
                     ),
    /*
     * scala.ebnf:84-85
     * class_parameter                      ::= annotation* ('val' | 'var')? (identifier: name) (':' (_type: type))?
     *                                            ('=' (_expression: default_value))?
     */
    parameter: $ => seq(
                      repeat($.annotation),
                      field('name', $.identifier),
                      optional(seq(':', field('type', $._param_type))),
                      optional(seq('=', field('default_value', $._expression)))
                    ),
    /*
     * scala.ebnf:87
     * _block                               ::= <(((_expression | _definition) (_semicolon (_expression | _definition))*) _semicolon?)
     */
    _block: $ => prec.left(
                   seq(
                     seq(
                       choice($._expression, $._definition),
                       repeat(seq($._semicolon, choice($._expression, $._definition)))
                     ),
                     optional($._semicolon)
                   )
                 ),
    /*
     * scala.ebnf:88
     * block                                ::= '{' _block? '}'
     */
    block: $ => seq('{', optional($._block), '}'),
    /*
     * scala.ebnf:89
     * _type                                ::= function_type | compound_type | infix_type | _annotated_type
     */
    _type: $ => choice($.function_type, $.compound_type, $.infix_type, $._annotated_type),
    /*
     * scala.ebnf:90
     * _annotated_type                      ::= >(_simple_type annotation*)
     */
    _annotated_type: $ => prec.right(seq($._simple_type, repeat($.annotation))),
    /*
     * scala.ebnf:91
     * _simple_type                         ::= generic_type | projected_type | tuple_type | stable_type_identifier | _type_identifier
     */
    _simple_type: $ => choice(
                         $.generic_type,
                         $.projected_type,
                         $.tuple_type,
                         $.stable_type_identifier,
                         $._type_identifier
                       ),
    /*
     * scala.ebnf:92
     * compound_type                        ::= 3((_annotated_type: base) ('with' (_annotated_type: extra))+)
     */
    compound_type: $ => prec(
                          3,
                          seq(
                            field('base', $._annotated_type),
                            repeat1(seq('with', field('extra', $._annotated_type)))
                          )
                        ),
    /*
     * scala.ebnf:93-95
     * infix_type                           ::= <2(((compound_type | infix_type | _annotated_type): left)
     *                                            ((identifier | operator_identifier): operator)
     *                                            ((compound_type | infix_type | _annotated_type): right))
     */
    infix_type: $ => prec.left(
                       2,
                       seq(
                         field('left', choice($.compound_type, $.infix_type, $._annotated_type)),
                         field('operator', choice($.identifier, $.operator_identifier)),
                         field('right', choice($.compound_type, $.infix_type, $._annotated_type))
                       )
                     ),
    /*
     * scala.ebnf:96
     * tuple_type                           ::= '(' (_type (',' _type)*) ')'
     */
    tuple_type: $ => seq('(', seq($._type, repeat(seq(',', $._type))), ')'),
    /*
     * scala.ebnf:97
     * stable_type_identifier               ::= (identifier | stable_identifier) '.' _type_identifier
     */
    stable_type_identifier: $ => seq(choice($.identifier, $.stable_identifier), '.', $._type_identifier),
    /*
     * scala.ebnf:98
     * stable_identifier                    ::= (identifier | stable_identifier) '.' identifier
     */
    stable_identifier: $ => seq(choice($.identifier, $.stable_identifier), '.', $.identifier),
    /*
     * scala.ebnf:99
     * generic_type                         ::= (_simple_type: type) (type_arguments: type_arguments)
     */
    generic_type: $ => seq(field('type', $._simple_type), field('type_arguments', $.type_arguments)),
    /*
     * scala.ebnf:100
     * projected_type                       ::= (_simple_type: type) '#' (_type_identifier: selector)
     */
    projected_type: $ => seq(field('type', $._simple_type), '#', field('selector', $._type_identifier)),
    /*
     * scala.ebnf:101
     * function_type                        ::= >((parameter_types: parameter_types) '=>' (_type: return_type))
     */
    function_type: $ => prec.right(
                          seq(field('parameter_types', $.parameter_types), '=>', field('return_type', $._type))
                        ),
    /*
     * scala.ebnf:102-105
     * parameter_types                      ::= -1(_annotated_type
     *                                        | ~1('(' (_param_type (',' _param_type)*)? ')')
     *                                        | compound_type
     *                                        | infix_type)
     */
    parameter_types: $ => prec(
                            -1,
                            choice(
                              $._annotated_type,
                              prec.dynamic(1, seq('(', optional(seq($._param_type, repeat(seq(',', $._param_type)))), ')')),
                              $.compound_type,
                              $.infix_type
                            )
                          ),
    /*
     * scala.ebnf:106
     * _param_type                          ::= _type | lazy_parameter_type | repeated_parameter_type
     */
    _param_type: $ => choice($._type, $.lazy_parameter_type, $.repeated_parameter_type),
    /*
     * scala.ebnf:107
     * lazy_parameter_type                  ::= '=>' (_type: type)
     */
    _type_identifier: $ => alias($.identifier, $.type_identifier),
    /*
     * scala.ebnf:110-119
     * _pattern                             ::= identifier
     *                                        | capture_pattern
     *                                        | tuple_pattern
     *                                        | case_class_pattern
     *                                        | infix_pattern
     *                                        | alternative_pattern
     *                                        | typed_pattern
     *                                        | number
     *                                        | string
     *                                        | wildcard
     */
    _expression: $ => choice(
                        $.if_expression,
                        $.match_expression,
                        $.try_expression,
                        $.call_expression,
                        $.generic_function,
                        $.assignment_expression,
                        $.parenthesized_expression,
                        $.interpolated_string_expression,
                        $.field_expression,
                        $.instance_expression,
                        $.infix_expression,
                        $.prefix_expression,
                        $.tuple_expression,
                        $.case_block,
                        $.block,
                        $.identifier,
                        $.number,
                        $.string
                      ),
    /*
     * scala.ebnf:144-145
     * if_expression                        ::= >('if' (parenthesized_expression: condition) (_expression: consequence)
     *                                            ('else' (_expression: alternative))?)
     */
